Bug 397149 - ktorrent-5.1.0/libktcore/plugin/pluginmanager.cpp:95: bad if ?
Summary: ktorrent-5.1.0/libktcore/plugin/pluginmanager.cpp:95: bad if ?
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-04 13:13 UTC by dcb314
Modified: 2018-08-30 23:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dcb314 2018-08-04 13:13:22 UTC
ktorrent-5.1.0/libktcore/plugin/pluginmanager.cpp:95]: (style) Boolean result is used in bitwise operation. Clarify expression with parentheses.

Source code is

    if (loaded.contains(idx) & !pi.isPluginEnabled())

Maybe better code

    if (loaded.contains(idx) && !pi.isPluginEnabled())
Comment 1 Christoph Feck 2018-08-30 23:45:05 UTC
Git commit 9f681042844454214110a92dd5a2ca75492e914e by Christoph Feck.
Committed on 30/08/2018 at 23:44.
Pushed by cfeck into branch 'master'.

GIT_SILENT Fix conditional expression

M  +1    -1    libktcore/plugin/pluginmanager.cpp

https://commits.kde.org/ktorrent/9f681042844454214110a92dd5a2ca75492e914e
Comment 2 Christoph Feck 2018-08-30 23:56:04 UTC
Thanks, pushed.