GIT_SILENT Fix conditional expression

BUG: 397149